src/test/ui/nll/ty-outlives/wf-unreachable.stderr
error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:8:12
   |
LL | fn uninit<'a>() {
   |           -- lifetime `'a` defined here
LL |     return;
LL |     let x: &'static &'a ();
   |            ^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:13:12
   |
LL | fn var_type<'a>() {
   |             -- lifetime `'a` defined here
LL |     return;
LL |     let x: &'static &'a () = &&();
   |            ^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:17:12
   |
LL | fn uninit_infer<'a>() {
   |                 -- lifetime `'a` defined here
LL |     let x: &'static &'a _;
   |            ^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:23:12
   |
LL | fn infer<'a>() {
   |          -- lifetime `'a` defined here
LL |     return;
LL |     let x: &'static &'a _ = &&();
   |            ^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:28:12
   |
LL | fn uninit_no_var<'a>() {
   |                  -- lifetime `'a` defined here
LL |     return;
LL |     let _: &'static &'a ();
   |            ^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:33:12
   |
LL | fn no_var<'a>() {
   |           -- lifetime `'a` defined here
LL |     return;
LL |     let _: &'static &'a () = &&();
   |            ^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:38:12
   |
LL | fn infer_no_var<'a>() {
   |                 -- lifetime `'a` defined here
LL |     return;
LL |     let _: &'static &'a _ = &&();
   |            ^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/wf-unreachable.rs:51:12
   |
LL | fn required_substs<'a>() {
   |                    -- lifetime `'a` defined here
LL |     return;
LL |     let _: C<'static, 'a, _> = C((), &(), &());
   |            ^^^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: aborting due to 8 previous errors

